--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   </header>
   <div class="sidebar-content">
     <ul>
-      @for (board of boardService.BoardsArray; track board.id) {
+      @for (board of boardService.boardsArray; track board) {
       <li class="sidebar-item">
         <app-board-btn [boardBtn]="board" />
       </li>
