--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <header>
-    <p>Please select a board from the sidebar.</p>
+    <p><i class="pi pi-exclamation-circle"></i> Select a board from the sidebar, or create a new one.</p>
 </header>
