--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
 } @else {
 <aside class="sidebar">
   <header class="header">
-    <h3><i class="icon pi pi-list"></i> Task Organizer</h3>
+    <h3><i class="logo pi pi-list"></i> Task Organizer</h3>
     <button (click)="toggleButtonState('sidebarBtn')" class="sidebar-close-btn">
       <i class="pi pi-angle-double-left"></i>
     </button>
